--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,9 @@ python = "^3.8"
 Django = "^4.0.2"
 django-environ = "^0.8.1"
 psycopg2-binary = "^2.9.3"
+Pillow = "^9.0.1"
+django-phonenumber-field = "^6.1.0"
+phonenumbers = "^8.12.44"
 
 [tool.poetry.dev-dependencies]
 
